--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,4 +9,6 @@ add_executable(adventofcode2019
         day01/puzzle.h day01/puzzle.cpp
         day02/puzzle.h day02/puzzle.cpp
         day03/puzzle.h day03/puzzle.cpp
+        day03/coords.h
+        day03/wire.h
         day04/puzzle.h day04/puzzle.cpp)
