Solution for Day 7

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,12 @@ set(CMAKE_CXX_STANDARD 17)
 add_executable(adventofcode2019
         main.cpp
         utils.h utils.cpp
+        intcode/computer.h
+        intcode/instruction.h
+        intcode/operation.h
+        intcode/output.h
+        intcode/input.h
+        intcode/parameter.h
         day01/puzzle.h day01/puzzle.cpp
         day02/puzzle.h day02/puzzle.cpp
         day03/puzzle.h day03/puzzle.cpp
@@ -19,4 +25,6 @@ add_executable(adventofcode2019
         day05/parameter.h
         day05/puzzle.h day05/puzzle.cpp
         day06/graph.h
-        day06/puzzle.h day06/puzzle.cpp)
+        day06/puzzle.h day06/puzzle.cpp
+        day07/amplifier.h
+        day07/puzzle.h day07/puzzle.cpp)
