Solution for Day 9

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,4 +23,5 @@ add_executable(adventofcode2019
         day06/puzzle.h day06/puzzle.cpp
         day07/amplifier.h
         day07/puzzle.h day07/puzzle.cpp
-        day08/puzzle.h day08/puzzle.cpp)
+        day08/puzzle.h day08/puzzle.cpp
+        day09/puzzle.h day09/puzzle.cpp)
