--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,10 +12,10 @@ add_executable(adventofcode2019
         intcode/output.h
         intcode/input.h
         intcode/parameter.h
+        map/coords.h
         day01/puzzle.h day01/puzzle.cpp
         day02/puzzle.h day02/puzzle.cpp
         day03/puzzle.h day03/puzzle.cpp
-        day03/coords.h
         day03/wire.h
         day04/puzzle.h day04/puzzle.cpp
         day05/puzzle.h day05/puzzle.cpp
